testFindAll | UserServiceImplTest